client/src/styles/card2.css
.cards a,
.cards a:hover,
.cards a:active,
.cards a:link,
.cards a:visited {
  text-decoration: none;
  color: black;
}

.card {
  display: flex;
  flex-direction: row;
  background-color: #e5f348;
  width: 479px;
  /* justify-content: flex-end; */
  padding: 3px 0px 3px 0px;
  border: 2px solid black;
  margin: 20px auto;
}

.card > div:nth-child(1) {
  text-align: center;
  width: 25px;
  border: 2px solid black;
  border-style: none solid none none;
  /* position: relative; */
}

.card > div:nth-child(1) > div {
  transform: rotate(-90deg);
  transform-origin: 0 100%;
  position: absolute;
  line-height: 23px;
  font-size: 14px;
  height: 25px;
  width: 150px;
  left: 25px;
  bottom: 0;
}

.card > div:nth-child(2) {
  display: flex;
  width: 450px;
  height: 150px;
}

.columnCard {
  display: flex;
  flex-direction: column;
  flex-basis: 150px;
}

.cardElement {
  background-image: url("../assets/cardcell.png");
  background-repeat: no-repeat;
  background-size: 48px, 48px;
  background-position: center;
  border-color: #333333;
  border-style: dashed;
  border-width: 2px;
  width: 50px;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.cardElement div {
  font-weight: bolder;
  font-size: 25px;
}

.cardElement img {
  width: 48px;
  height: 48px;
}

